# math

./: CMakeLists.txt  main.cpp
src/: point.hpp  tpoint.hpp  tvector.hpp  vector.hpp
src/basic/: geometry.hpp
src/basic/detail/: transform.hpp
test/: vector_operand.cpp  vector_test.cpp
